--- a/Source/style.css
+++ b/Source/style.css
@@ -1,18 +1,18 @@
 @font-face {
-  font-family: 'pokemon';
-  src: url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('chrome-extension://__MSG_@@extension_id__/PokemonSolid.woff2') format('woff2'), /* Super Modern Browsers */
-       url('chrome-extension://__MSG_@@extension_id__/PokemonSolid.ttf')  format('truetype'); /* Safari, Android, iOS */
+    font-family: 'pokemon';
+    src: url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('chrome-extension://__MSG_@@extension_id__/PokemonSolid.woff2') format('woff2'), /* Super Modern Browsers */
+    url('chrome-extension://__MSG_@@extension_id__/PokemonSolid.ttf') format('truetype');
+    /* Safari, Android, iOS */
 }
-
 @font-face {
-  font-family: 'pikapika';
-  src: url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('chrome-extension://__MSG_@@extension_id__/pikapika.woff2') format('woff2'), /* Super Modern Browsers */
-       url('chrome-extension://__MSG_@@extension_id__/pikapika.ttf')  format('truetype'); /* Safari, Android, iOS */
+    font-family: 'pikapika';
+    src: url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('chrome-extension://__MSG_@@extension_id__/pikapika.woff2') format('woff2'), /* Super Modern Browsers */
+    url('chrome-extension://__MSG_@@extension_id__/pikapika.ttf') format('truetype');
+    /* Safari, Android, iOS */
 }
-
 * {
-  font-family: pokemon!important;  
-  cursor: url('chrome-extension://__MSG_@@extension_id__/cursor.png'), url('chrome-extension://__MSG_@@extension_id__/Pokeball_icon.png'), default;
+    font-family: pokemon!important;
+    cursor: url('chrome-extension://__MSG_@@extension_id__/cursor.png'), url('chrome-extension://__MSG_@@extension_id__/Pokeball_icon.png'), default;
 }
